[package]
name = "smoke_test"
version = "0.1.0"
authors = ["Siddhanth B N <bnsiddhanth0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
protohackers_tcp_helper = { path = "../protohackers_tcp_helper" }